--- a/lab1.html
+++ b/lab1.html
@@ -6,6 +6,7 @@ bear
 </title>
 </head>
 <body>
+<h1> lab2</h1>
 <h1> The Brown Bear</h1>
 <p> the brown bear is native to parts of northen eursa and north .there are many supspecis within.</p>
 <a herf=:"https://en.wikipedia.org/wiki/Brown_bear"> learn more </a>
